@@ -42,3 +42,7 @@
 	and 'conflib.h'.
 2014-08-19 Fred Gleason <fredg@paravelsystems.com>
 	* Added a call to AM_SILENT_RULES() in 'configure.ac'.
+2014-08-19 Fred Gleason <fredg@paravelsystems.com>
+	* Modified 'Makefile.am' to use the location specified by the
+	'--libexecdir=' switch to 'configure' to specify installation
+	location of the script.
